--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "axios": "^1.3.5",
     "pinia": "^2.0.34",
     "roboto-fontface": "*",
     "vue": "^3.2.47",
